--- a/test/basic-test.html
+++ b/test/basic-test.html
@@ -11,6 +11,21 @@
 <body>
 <script>
     suite("basic", function () {
+        /**
+         *  Connection typing system (always output to input)
+         *
+         * `Number` ===> `Number` - Direct connection
+         * `Number` =~=> `String` - Compatible connection
+         * `Template:String` =#=> `Number` - Template connection
+         * `String` =/=> `Number` - Impossible connection
+         * `Template:String` =/=> `Array` - Impossible template connection
+         */
+        /**
+         *  Value typing system
+         *  `Number` ===> `Number` - Direct assignation
+         *  `Number` =~=> `Number` - Conversion and assignation
+         *  `Number` =/=> `Number` - Impossible assignation
+         */
         test("create graph", function () {
             var graph = new dudeGraph.Graph();
             expect(graph.graphBlocks).to.have.length(0);
@@ -210,7 +225,7 @@
             inputPoint.pointValue = true;
             expect(inputPoint.pointValue).to.be.equal(1);
             expect(function () {
-                inputPoint.pointValue = "1234.435.12"; // Test non compatible pointValue "1234.435.12" with `Number`
+                inputPoint.pointValue = "1234.435.12"; // "1234.435.12" =/=> `Number`
             }).to.throw();
             expect(function () {
                 inputPoint.pointValue = [3, true, {}];
@@ -218,7 +233,7 @@
             var inputPoint2 = new dudeGraph.Point(true, {
                 "pointName": "in2",
                 "pointValueType": "String",
-                "pointValue": 42 // 42 is convertible to `String`
+                "pointValue": 42 // 42 =~=> `String`
             });
             block.addPoint(inputPoint2);
             expect(inputPoint2.pointValue).to.be.equal("42");
@@ -230,7 +245,7 @@
                 block.addPoint(new dudeGraph.Point(false, {
                     "pointName": "in2",
                     "pointValueType": "Number",
-                    "pointValue": "NaN" // Non compatible inline pointValue "NaN" with `Number`
+                    "pointValue": "NaN" // "NaN" =/=> `Number`
                 }));
             }).to.throw();
         });
@@ -422,11 +437,11 @@
             });
             var outputPoint1_3 = new dudeGraph.Point(true, {
                 "pointName": "out3",
-                "pointValueType": "Number"
+                "pointValueType": "String"
             });
             var outputPoint1_4 = new dudeGraph.Point(true, {
                 "pointName": "out4",
-                "pointValueType": "String"
+                "pointValueType": "Number"
             });
             var inputPoint2_1 = new dudeGraph.Point(false, {
                 "pointName": "in",
@@ -438,11 +453,11 @@
             });
             var inputPoint2_3 = new dudeGraph.Point(false, {
                 "pointName": "in3",
-                "pointValueType": "String"
+                "pointValueType": "Number"
             });
             var inputPoint2_4 = new dudeGraph.Point(false, {
                 "pointName": "in3",
-                "pointValueType": "Number"
+                "pointValueType": "String"
             });
             block1.addPoint(outputPoint1_1);
             block1.addPoint(outputPoint1_2);
@@ -450,23 +465,23 @@
             block2.addPoint(inputPoint2_1);
             block2.addPoint(inputPoint2_2);
             block2.addPoint(inputPoint2_3);
-            outputPoint1_1.connect(inputPoint2_1); // `Number` => `Boolean`
+            outputPoint1_1.connect(inputPoint2_1); // `Number` =~=> `Boolean`
             outputPoint1_1.disconnect(inputPoint2_1);
-            inputPoint2_1.connect(outputPoint1_1); // `Number` => `Boolean`
+            inputPoint2_1.connect(outputPoint1_1); // `Number` =~=> `Boolean`
             inputPoint2_1.disconnect(outputPoint1_1);
-            outputPoint1_2.connect(inputPoint2_2); // `Boolean` => `Number`
+            outputPoint1_2.connect(inputPoint2_2); // `Boolean` =~=> `Number`
             outputPoint1_2.disconnect(inputPoint2_2);
-            inputPoint2_2.connect(outputPoint1_2); // `Boolean` => `Number`
+            inputPoint2_2.connect(outputPoint1_2); // `Boolean` =~=> `Number`
             inputPoint2_2.disconnect(outputPoint1_2);
-            outputPoint1_3.connect(inputPoint2_3); // `String` => `Number`
+            outputPoint1_3.connect(inputPoint2_3); // `Number` =~=> `String`
             outputPoint1_3.disconnect(inputPoint2_3);
-            inputPoint2_3.connect(outputPoint1_3); // `String` => `Number`
+            inputPoint2_3.connect(outputPoint1_3); // `Number` =~=> `String`
             inputPoint2_3.disconnect(outputPoint1_3);
             expect(function () {
-                outputPoint1_4.connect(inputPoint2_4); // `Number` =/=> `String`
+                outputPoint1_4.connect(inputPoint2_4); // `String` =/=> `Number`
             }).to.throw();
             expect(function () {
-                inputPoint2_4.connect(outputPoint1_4); // `Number` =/=> `String`
+                inputPoint2_4.connect(outputPoint1_4); // `String` =/=> `Number`
             }).to.throw();
         });
         test("cannot mix connect and point value", function () {
@@ -761,40 +776,50 @@
             expect(inputPoint1_3.pointValueType).to.be.equals("Number");
             var block2 = new dudeGraph.Block();
             graph.addBlock(block2);
-            var outputPoint2_1 = new dudeGraph.Point(true, {
+            var outputPointNumber = new dudeGraph.Point(true, {
                 "pointName": "out",
                 "pointValueType": "Number"
             });
-            var outputPoint2_2 = new dudeGraph.Point(true, {
+            var outputPointString = new dudeGraph.Point(true, {
                 "pointName": "out2",
                 "pointValueType": "String"
             });
-            var outputPoint2_3 = new dudeGraph.Point(true, {
+            var outputPointBoolean = new dudeGraph.Point(true, {
                 "pointName": "out3",
                 "pointValueType": "Boolean"
             });
-            block2.addPoint(outputPoint2_1);
-            block2.addPoint(outputPoint2_2);
-            block2.addPoint(outputPoint2_3);
-            outputPoint2_1.connect(inputPoint1_1); // `Number` ===> `Number`
+            var outputPointArray = new dudeGraph.Point(true, {
+                "pointName": "out4",
+                "pointValueType": "Array"
+            });
+            block2.addPoint(outputPointNumber);
+            block2.addPoint(outputPointString);
+            block2.addPoint(outputPointBoolean);
+            block2.addPoint(outputPointArray);
             expect(function () {
-                outputPoint2_2.connect(inputPoint1_2); // `String` =/=> `Number`
+                outputPointArray.connect(inputPoint1_1); // `Array` =/=> `TemplateTest:Number`
             }).to.throw();
-            expect(block1.template("TemplateTest").valueType).to.be.equals("Number");
-            expect(inputPoint1_1.pointValueType).to.be.equals("Number");
-            expect(inputPoint1_2.pointValueType).to.be.equals("Number");
-            expect(inputPoint1_3.pointValueType).to.be.equals("Number");
-            block1.updateTemplate("TemplateTest", "String");
-            expect(block1.template("TemplateTest").valueType).to.be.equals("String");
-            expect(inputPoint1_1.pointValueType).to.be.equals("String");
-            expect(inputPoint1_2.pointValueType).to.be.equals("String");
-            expect(inputPoint1_3.pointValueType).to.be.equals("String");
+            outputPointNumber.connect(inputPoint1_1); // `Number` ===> `TemplateTest:Number`
+            outputPointNumber.disconnect(inputPoint1_1);
+            inputPoint1_2.pointValue = 32;
+            block1.updateTemplate("TemplateTest", "String"); // inputPoint1_2 `TemplateTest:Number` =~=> `String`
+            expect(inputPoint1_1.pointValueType).to.be.equal("String");
+            expect(inputPoint1_2.pointValueType).to.be.equal("String");
+            expect(inputPoint1_3.pointValueType).to.be.equal("String");
+            expect(inputPoint1_2.pointValue).to.be.equal("32");
+            inputPoint1_2.pointValue = null;
+            outputPointBoolean.connect(inputPoint1_1); // inputPoint1_1 `Boolean` =#=> `TemplateTest:String`
+            inputPoint1_2.pointValue = false;
+            inputPoint1_3.pointValue = true;
+            expect(inputPoint1_1.pointValueType).to.be.equal("Boolean");
+            expect(inputPoint1_2.pointValueType).to.be.equal("Boolean");
+            expect(inputPoint1_3.pointValueType).to.be.equal("Boolean");
         });
         /*
         test("custom block and custom point", function () {
 
         });
-        test("ill-formed templated point", function () {
+        test("ill-formed template point", function () {
             var graph = new dudeGraph.Graph();
             var block = new dudeGraph.Block({
                 "blockTemplates": {
