--- a/dude-graph-editor.html
+++ b/dude-graph-editor.html
@@ -290,12 +290,12 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
          * @returns {dudeGraph.RenderBlock}
          */
         createBlock: function (blockData) {
-            var cgBlock = this.get("loader").loadBlock(this.get("graph"), _.merge(blockData, {
-                "cgId": dudeGraph.uuid()
+            var block = this.get("loader").loadBlock(this.get("graph"), _.merge(blockData, {
+                "blockId": dudeGraph.uuid()
             }));
             return this.renderer.createRenderBlock({
-                "id": cgBlock.cgId,
-                "cgBlock": cgBlock.cgId
+                "id": block.blockId,
+                "blockId": block.blockId
             }, true);
         },
 
